Gå over til bookdown og github-pages (#2)
* first try in bookdown

* try set version bookdown

* description file

* Revert "try set version bookdown"

This reverts commit 7cac8d7410f8cd68eba8fe030d36ef00f34201f1.

* force new build...

* another try. Hopefully older version of bookdown

* bookdown in travis.yml

* rm leftovers from docsens

* added ggplot2 to DESCRIPTION

* rm leftovers from readthedocs build

* try with only html pages

* utf-7 -> utf-8

* added empty .nojekyll file in docs folder

* _bookdown.yml-fil der jeg spesifiserer å bruke docs

* drop html-proofer for now

* ```sas fungerer ikke

* something not right

* bruker html-proofer igjen

* try to include knitr figure

* fikset diverse html-proofer errors

* another htmlproofer fix

* rm internal link

* rm another internal link

* definere kap i _bookdown.yml fil

* try new layout bookdown yml

* md instead of Rmd

* Revert "md instead of Rmd"

This reverts commit 9fd45b98aa6d570b96c02a6649da6d3ce5bdd7b9.

* try with r-code to add figure

* ignore alt

* alt text til knitr::include_graphics

* more knitr, plus some mod to SAS

* try danger block

* try to build pdf

* turn of pdf, try _output.yml

* Revert "try danger block"

This reverts commit 14d612169318625ad5adc48818d8d39eb1017f8e.

* another try with pdf

* try

* another try, do not use lualatex

* yet another try

* rm some leftovers from areedv in index.Rmd

* rm too much in previous commmit...

* la inn alle kap. i pdf

--- a/git-r.Rmd
+++ b/git-r.Rmd
@@ -1,6 +1,6 @@
 ﻿# Rstudio, git og github på Windows gjennom proxy
 
-En beskrivelse av hvordan man setter opp git på Windows-maskiner finnes [her](git.html). Dette må gjøres først. Hvis det oppstår problemer med denne fremgangsmåten, send gjerne en beskjed til <A HREF="mailto:&#097;&#114;&#110;&#102;&#105;&#110;&#110;&#046;&#115;&#116;&#101;&#105;&#110;&#100;&#097;&#108;&#064;&#115;&#107;&#100;&#101;&#046;&#110;&#111;">arnfinn</A>.
+En beskrivelse av hvordan man setter opp git på Windows-maskiner finnes [her](intro-til-git-for-windows.html). Dette må gjøres først. Hvis det oppstår problemer med denne fremgangsmåten, send gjerne en beskjed til <A HREF="mailto:&#097;&#114;&#110;&#102;&#105;&#110;&#110;&#046;&#115;&#116;&#101;&#105;&#110;&#100;&#097;&#108;&#064;&#115;&#107;&#100;&#101;&#046;&#110;&#111;">arnfinn</A>.
 
 
 ## Hvordan sette opp git i rstudio
