--- a/latex_intro.Rmd
+++ b/latex_intro.Rmd
@@ -34,7 +34,9 @@ Litt mer tekst med æ, ø og å.
 - Overskrifter og underoverskrifter skrives i `\section{}` og `\subsection{}`.
 
 Kopier teksten inn i et nytt dokument i TeXmaker, lagre det, og trykk på `F6`. Dokumentet blir da kompilert og lager en pdf. pdf-filen kan åpnes ved å trykke `F7`. Dette vil gi et dokument som ser slik ut:  
-![Alt text](figurer/simple_tex.png)
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/simple_tex.png")
+```
 
 ### Diverse man må huske
 
@@ -131,7 +133,7 @@ Denne her: [rapport barnehelseatlas](http://www.helseatlas.no/getfile.php/SKDE%2
 
 ### Selve dokumentet
 
-Bruker `\input{filnavn}` for å legge inn andre LaTeX-fileri, der all teksten ligger. "side2" er gitt [under](#side2tex).
+Bruker `\input{filnavn}` for å legge inn andre LaTeX-fileri, der all teksten ligger. "side2" er gitt under.
 
 ```latex
 \begin{document}
