--- a/r-shiny.Rmd
+++ b/r-shiny.Rmd
@@ -18,7 +18,9 @@ install.packages("shiny")
 - [Opprett en ny](new_rshiny.md) eller åpne en gammel "Shiny web application" i Rstudio.
 - Kopier din token fra [shinyapps](http://www.shinyapps.io/admin/#/tokens) og kopier over i "Manage Accounts"
 
-![Alt text](figurer/rshiny_5.png)
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_5.png")
+```
 
 
 ### Laste opp en shinyapp til http://www.shinyapps.io
@@ -38,9 +40,19 @@ deployApp(appName = "tabellverk")
 ## Hvordan opprette en ny Rshiny applikasjon
 
 
-![Alt text](figurer/rshiny_1.png)
-![Alt text](figurer/rshiny_2.png)
-![Alt text](figurer/rshiny_3.png)
-![Alt text](figurer/rshiny_4.png)
-![Alt text](figurer/rshiny_5.png)
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_1.png")
+```
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_2.png")
+```
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_3.png")
+```
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_4.png")
+```
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_5.png")
+```
 
