--- a/zotero.Rmd
+++ b/zotero.Rmd
@@ -4,11 +4,11 @@ Referanseverktøy
 
 Toril har lagd en database over aktuelle artikler hun har funnet i løpet av sin tid ved SKDE. Denne databasen er laget med *Zotero* og kan deles med (og oppdateres av) alle ved SKDE.
 
-1 Registrer deg på [zotero.org](https://www.zotero.org/user/register/)
-2 Be Arnfinn om å legge deg til gruppen *SKDE*
-3 [Last ned](https://www.zotero.org/download/) og installér *Zotero* lokalt på din maskin.
-4 Åpne programmet og logg inn (`Edit/Preferences/Sync`)
-5 Trykk på den grønne *sync*-knappen oppe til høyre
+1. Registrer deg på [zotero.org](https://www.zotero.org/user/register/)
+2. Be Arnfinn om å legge deg til gruppen *SKDE*
+3. [Last ned](https://www.zotero.org/download/) og installér *Zotero* lokalt på din maskin.
+4. Åpne programmet og logg inn (`Edit/Preferences/Sync`)
+5. Trykk på den grønne *sync*-knappen oppe til høyre
 
 
 
