--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -1,6 +1,7 @@
 \usepackage{xcolor}
 \usepackage{sectsty}
 \usepackage[norsk]{babel}
+\usepackage{fontspec}
 
 % Gjør alle lenker mørkeblå
 \definecolor{darkblue}{rgb}{0.0,0.0,0.3}
