--- a/rmd/latex.Rmd
+++ b/rmd/latex.Rmd
@@ -1,14 +1,97 @@
-﻿# Hvordan installere LaTeX på SKDE-maskiner
+# LaTeX
 
-Hvis det oppstår problemer med denne fremgangsmåten, send gjerne en beskjed til <A HREF="mailto:&#097;&#114;&#110;&#102;&#105;&#110;&#110;&#046;&#115;&#116;&#101;&#105;&#110;&#100;&#097;&#108;&#064;&#115;&#107;&#100;&#101;&#046;&#110;&#111;">arnfinn</A>.
+## En enkel start
 
-## Bruk heller Overleaf
+Dette dokumentet er omtrent så enkelt det kan bli med LaTeX
 
-*Det anbefales sterkt å bruke [overleaf.com](https://www.overleaf.com) i steden for å installere sin egen LaTeX på maskinen*. 
+```latex
+\documentclass[a4paper, norsk]{article}
 
-## Installere MikTeX
+\usepackage[utf8]{inputenc}
+\usepackage[norsk]{babel}
+\usepackage{parskip}
 
-Dette er selve LaTeX. 
+\begin{document}
+
+\section{Dette er en overskrift}
+
+En introduksjon til hvordan man skriver i \LaTeX.
+
+\subsection{En underoverskrift}
+
+Enkelt og greit.
+
+\section*{Dette er en overskrift uten teller}
+
+Litt mer tekst med æ, ø og å.
+
+\end{document}
+```  
+
+- Et LaTeX-dokument starter alltid med `documentclass`. Her spesifiserer man hva slags dokument man skal skrive (article/report/book) og gir noen instillinger (at dokumentet er på norsk og at det er A4).
+- Man legger så inn noen pakker man vil bruke. Her har jeg brukt pakken `inputenc` med valget `utf8` for å kunne skrive æ, ø og å. Jeg bruker i tillegg pakken `babel` med valg `norsk`, for å bryte ord riktig ved tvunget linjeskift. Til slutt bruker jeg pakken `parskip` for å få rom mellom avsnitt.
+- Mellom `\begin{document}` og `\end{document}` skriver man inn selve teksten.
+- Overskrifter og underoverskrifter skrives i `\section{}` og `\subsection{}`.
+
+Kopier teksten inn i et nytt dokument i TeXmaker, lagre det, og trykk på `F6`. Dokumentet blir da kompilert og lager en pdf. pdf-filen kan åpnes ved å trykke `F7`. Dette vil gi et dokument som ser slik ut:  
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/simple_tex.png")
+```
+
+### Diverse man må huske
+
+- 40 % skrives `40\,\%`
+- "friske" skrives `<<friske>>`
+- én skrives `{\'e}n`
+
+
+## BibTeX
+
+Når man legger inn referanser i LaTeX bruker man som regel bibtex. Da lager man en egen fil som heter noe som ender på `.bib`. I denne skrives alle referansene, omtrent slik som dette:
+```latex
+
+@article{Adler2013,
+author = {Adler, Jeremy and Sandberg, Kelly C. and Shpeen, Benjamin H. and Eder, Sally J. and Dhanani, Muhammad and Clark, Sarah J. and Freed, Gary L},
+title = {Variation in {I}nfliximab Administration Practices in the Treatment of Pediatric Inflammatory Bowel Disease},
+journal = "J Pediatr. Gastroenterol. Nutr.",
+year = {2013},
+volume = {57},
+number = {1},
+pages = {35-38},
+}
+
+
+
+@misc{dagkir,
+author = {Lise Balteskard and Trygve Deraas and Olav Helge Førde and Trine Magnus and Frank Olsen and Bård Uleberg},
+title = {Dagkirurgi i {N}orge 2011-2013, utvalgte inngrep},
+month = {Januar},
+year = {2015},
+isbn = {978-82-93141-16-7},
+note = {{ISBN: 978-82-93141-16-7}}
+}
+
+```
+
+- `Adler2013` og `dagkir` er "nøkkelen" man bruker for å sitere disse referansene i teksten. Det gjør man ved å skrive "\cite{Adler2013}" der man vil putte siteringen.
+- Man skiller forfattere med "and"
+- Alt, bortsett fra første bokstav, i tittel blir små bokstaver, så hvis man vil beholde stor bokstav må bokstaven "beskyttes" med klammeparantes (som i {I}nfliximab).
+- Når man skal kompilere LaTeX-dokumentet når man bruker bibtex må man gjøre dette flere ganger for at alt skal bli riktig. I TeXmaker må man typisk gjøre følgende: `F6`, `F11`, `F6`, `F6` (`F11` for å kompilere bibtex-filen).
+- Å finne "riktig" referansestil, både i tekst og i referanselisten til slutt, kan være litt pes. Kan være lurt å bruke enten `natbib` eller `biblatex`.
+- Se ellers annen bibtex-dokumentasjon på nett.
+- I barnehelseatlasrapporten ville vi ha to referanselister: en for de som ble sitert i teksten og en for resten av artiklene i vår bib-fil. Dette ble gjort ved bruk av pakken `bibtopic` og det som står etter `\begin{btSect}`.
+
+
+
+﻿## Hvordan installere LaTeX på SKDE-maskiner
+
+**Bruk heller Overleaf**
+
+*Det anbefales sterkt å bruke [overleaf.com](https://www.overleaf.com) i steden for å installere sin egen LaTeX på maskinen*.
+
+### Installere MikTeX
+
+Dette er selve LaTeX.
 
 1. Last ned fra [denne siden](http://miktex.org/download)
 2. Installér programmet på ditt hjemmeområdet på `c:`
@@ -16,11 +99,11 @@ Dette er selve LaTeX.
     1. Sjekk at General-fanen ser omtrent slik ut:  
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/miktex_general.png")
-``` 
+```
     2. Gå inn på Roots-fanen og legg inn følgende mappe (så slipper man å laste ned pakker hele tiden; det vil nå ta litt tid å samle informasjon):   
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/miktex_roots.png")
-``` 
+```
 4. Gå inn på `START/Alle programmer/MikTeX 2.9/Maintenance/Package Manager`
     1. Gå så inn på `Repository/Change Package Repository` og trykk på `Connection Settings...`  
 ```{r, echo=FALSE}
@@ -33,7 +116,7 @@ knitr::include_graphics("figurer/miktex_repository_proxy.png")
     3. Trykk `OK` og `Neste`, og skriv inn ditt brukernavn og passord i SKDE
     4. Velg en `remote package repository` nær deg, av typen 'http'
 
-## Installere Texmaker 
+### Installere Texmaker
 
 Dette er programmet vi skal skrive LaTeX i.
 
@@ -46,16 +129,16 @@ knitr::include_graphics("figurer/texmaker.png")
 
 Man kan velge et annet skriveprogram hvis man vil, f.eks [TeXnicCenter](http://www.texniccenter.org).
 
-## Bruke LaTeX
+### Bruke LaTeX
 
 [Google](http://www.google.no/search?q=introduction+to+latex) er din venn.  
 
-# Spor endringer i LaTeX ved bruk av *latexdiff*
+## Spor endringer i LaTeX ved bruk av *latexdiff*
 
 *latexdiff* lager en tex-fil ut fra forskjellene mellom to tex-filer, og fargelegger/stryker over det som er gjort av endringer mellom to versjoner.  Denne tex-filen kan vi så kompilere og lage en pdf.
 Alt dette må gjøres lokalt, noe som betyr at LaTeX må være installert på maskinen (MikTeX, hvis du sitter på en Windows-maskin). I tillegg må man ha *python* installert (mer om det senere).
 
-## Slå sammen flere flettede tex-filer til én tex-fil
+### Slå sammen flere flettede tex-filer til én tex-fil
 
 Vi jobber som regel med flere tex-filer ved bruk av `\input{}`. *latexdiff* fungerer bare på en fil av gangen. Vi må derfor samle sammen alle filene til én. Følgende *python*-script samler sammen flere tex-filer til én fil (kopiert fra [Andrew Walker](http://dropbearcode.blogspot.no/2011/09/multiple-file-latex-diff.html)):
 ```
@@ -93,8 +176,8 @@ if __name__ == "__main__":
   ./flatten-latex.py mappe2/rapport.tex > ny.tex
   ```
   Man har nå to tex-filer man kan kjøre *latexdiff* på
-	
-## Kjøre *latexdiff* på to tex-filer
+
+### Kjøre *latexdiff* på to tex-filer
 
 - Vi kan nå lage en ny tex-fil, som vi legger i mappen der nyeste versjon av LaTeX-prosjektet ligger (i dette tilfelle ´mappe2´)
 ```
@@ -110,14 +193,3 @@ lualatex diff
 lualatex diff
 ```
   Dette går som regel ikke smertefritt... Jeg fikk det ikke til på første forsøk i Windows. Hvis du er heldig har du nå et dokument som heter *diff.pdf* som viser endringene mellom to versjoner.
-
-
-
-
-
-
-
-  
-
-
-
